Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111796

Qt Font Scaling for bitmap fonts is broken in Wayland

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.0 FF, 6.8.2, 6.9.0 FF
    • 5.15.8
    • GUI: Font handling
    • None
    • Linux/Wayland, Linux/X11
    • b492582b9 (dev), 2f9b02acd (dev), b3aa4b32b (6.8), b6247ced7 (dev), 3a0e4b614 (6.8)

      the High DPI scaling for bitmap fonts seems broken in wayland;

      steps to reproduce:

       

      • use KDE, choose wayland session
      • in System Settings, choose display scaling factor > 1
      • using KDE Konsole, select a bitmap font (like Terminus), you will observe the following

      • Launch Konsole again with QT_QPA_PLATFORM=xcb, the font scaling is back to normal

        1. image-2023-03-07-20-27-46-062.png
          29 kB
          lulitao1997
        2. image-2023-03-07-20-28-57-854.png
          20 kB
          lulitao1997
        3. main.cpp
          2 kB
          Paul Olav Tvete
        For Gerrit Dashboard: QTBUG-111796
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            lulitao1997 lulitao1997
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes